Project bridges onto ground

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>gt-swing</artifactId>
             <version>${geotools.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
