--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>3.8.1</version>
         </dependency>
         <dependency>
+            <groupId>javax.vecmath</groupId>
+            <artifactId>vecmath</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-shapefile</artifactId>
             <version>${geotools.version}</version>
